...
                        .height(56.dp),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color(0xFF00CCFF) // Blue button color
                    ),
                    shape = RoundedCornerShape(16.dp)
                ) {
                    Text("Continue", color = Color.White, fontSize = 16.sp,fontFamily = InterFontFamily, fontWeight = FontWeight.Bold) // White text on blue button
                }

            }
        )


...
