...
    Image(
        painter = painterResource(id = R.drawable.loading_icon),
        contentDescription = "Rotating loading icon",
        modifier = modifier
            .size(250.dp) // Set a default size
            .graphicsLayer { rotationZ = LoadingRotate.value }
            .testTag("LoadingScreen")
    )
}


@Preview(showBackground = true)
@Composable
...
