...
                repeatMode = RepeatMode.Reverse

            )
        )
    }
    Column(
        modifier = Modifier.fillMaxSize().testTag("SplashScreen"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        SplashIcon()
        Spacer(modifier = Modifier.height(16.dp)) // Add spacing between icon and button
        Text( text = "FieldWise",
...
